--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -2,7 +2,7 @@
     "version": "0.2.0",
     "configurations": [
         {
-            "name": "Launch Edge",
+            "name": "Launch Elephant",
             "request": "launch",
             "type": "pwa-msedge",
             "url": "http://localhost:8082",
